--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
+	<meta name="description" content="My personal reading list" />
+
+	<title>Books - Gareth</title>
 
 	<script>
 		localStorage.theme === 'dark' ||
