Fix html validation errors

--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width" />
-	<meta name="description" content="My personal reading list" />
-
-	<title>Books - Gareth</title>
+	<meta charset="UTF-8">
+	<link rel="icon" href="%sveltekit.assets%/favicon.png">
+	<meta name="viewport" content="width=device-width">
+	<meta name="description" content="My personal reading list">
 
 	<script>
 		localStorage.theme === 'dark' ||
