Refactor theme initial load logic

--- a/src/app.html
+++ b/src/app.html
@@ -8,17 +8,20 @@
 	<meta name="description" content="My personal reading list">
 
 	<script>
-		localStorage.theme === 'dark' ||
-			((!("theme" in localStorage) || localStorage.theme === 'system') 
-			&& window.matchMedia('(prefers-color-scheme: dark)').matches)
-			
-			? document.documentElement.classList.add('dark')
-			: document.documentElement.classList.remove('dark');
-		window.matchMedia('(prefers-color-scheme: dark)').onchange = (e)  => {
+		const systemDark = (!("theme" in localStorage) || localStorage.theme === 'system')
+			&& window.matchMedia('(prefers-color-scheme: dark)').matches
+		if (localStorage.theme === 'dark' ||
+			(systemDark)) {
+			document.documentElement.classList.add('dark')
+		} else {
+			document.documentElement.classList.remove('dark');
+		}
+
+
+		window.matchMedia('(prefers-color-scheme: dark)').onchange = (e) => {
 			if (localStorage.theme !== 'system') {
 				return;
 			}
-			console.log("ccc");
 			if (e.matches) {
 				document.documentElement.classList.add('dark');
 			} else {
