--- a/src/app.html
+++ b/src/app.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="My personal reading list" />
 
-<head>
-	<meta charset="UTF-8">
-	<link rel="icon" href="%sveltekit.assets%/favicon.png">
-	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="My personal reading list">
+    <script>
+      const systemDark =
+        (!("theme" in localStorage) || localStorage.theme === "system") &&
+        window.matchMedia("(prefers-color-scheme: dark)").matches;
+      if (localStorage.theme === "dark" || systemDark) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
 
-	<script>
-		const systemDark = (!("theme" in localStorage) || localStorage.theme === 'system')
-			&& window.matchMedia('(prefers-color-scheme: dark)').matches
-		if (localStorage.theme === 'dark' ||
-			(systemDark)) {
-			document.documentElement.classList.add('dark')
-		} else {
-			document.documentElement.classList.remove('dark');
-		}
+      window.matchMedia("(prefers-color-scheme: dark)").onchange = (e) => {
+        if (localStorage.theme !== "system") {
+          return;
+        }
+        if (e.matches) {
+          document.documentElement.classList.add("dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+        }
+      };
+    </script>
 
+    %sveltekit.head%
+  </head>
 
-		window.matchMedia('(prefers-color-scheme: dark)').onchange = (e) => {
-			if (localStorage.theme !== 'system') {
-				return;
-			}
-			if (e.matches) {
-				document.documentElement.classList.add('dark');
-			} else {
-				document.documentElement.classList.remove('dark');
-			}
-		};
-	</script>
-
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover" class="min-h-screen relative">
-	<div style="display: block" class="min-h-screen relative">%sveltekit.body%</div>
-</body>
-
+  <body data-sveltekit-preload-data="hover" class="min-h-screen relative">
+    <div style="display: block" class="min-h-screen relative">
+      %sveltekit.body%
+    </div>
+  </body>
 </html>
